@@ -1,0 +1,7 @@
+Most icons here were reused and/or modified from other Eclipse plugins licensed under EPL.
+
+See: http://xantorohara.110mb.com/core-icons/Eclipse-16x16.html for example
+ 
+
+The _unused/ folder contains icons that are currently unused, but are of interest,
+and maybe used in the future. 
