@@ -1,6 +1,10 @@
 package mmrnmhrm.ui;
 
+import static melnorme.utilbox.core.Assert.AssertNamespace.assertNotNull;
+
 import java.io.FileNotFoundException;
+
+import mmrnmhrm.lang.ui.PluginImagesHelperExtension;
 
 import org.eclipse.core.runtime.IPath;
 import org.eclipse.core.runtime.Path;
@@ -23,11 +27,12 @@ public class DeePluginImages {
 	private static final String T_OVR = "ovr16";
 	
 	// Registry/helper must be on top, to be initialized before createImage is used 
-	private static final PluginImagesHelper helper = new PluginImagesHelper(
+	private static final PluginImagesHelperExtension helper = new PluginImagesHelperExtension(
 			DeeUI.getDefault().getBundle(), ICONS_PATH);
 	
 	private static ImageDescriptor createUnmanaged(String base, String imageName) {
-		return helper.createUnManaged(base, imageName);
+		// Hard fail if image not found.
+		return assertNotNull(helper.createUnManaged(base, imageName, false));
 	}
 	
 	public static final String ELEM_PACKAGE = createImage(T_OBJ, "dee_package.gif");
@@ -68,10 +73,13 @@ public class DeePluginImages {
 	public static final String NODE_REF = createImage(T_OBJ, "node_ref.gif");
 	
 	
-	public static final ImageDescriptor DESC_OVR_CONST = createUnmanaged(T_OVR, "ovr_const.gif");
 	public static final ImageDescriptor DESC_OVR_FINAL = createUnmanaged(T_OVR, "ovr_final.gif");
-	public static final ImageDescriptor DESC_OVR_IMMUTABLE = createUnmanaged(T_OVR, "ovr_immutable.gif");
 	public static final ImageDescriptor DESC_OVR_STATIC = createUnmanaged(T_OVR, "ovr_static.png");
+	
+	public static final ImageDescriptor DESC_OVR_CONST = createUnmanaged(T_OVR, "ovr_const.png");
+	public static final ImageDescriptor DESC_OVR_IMMUTABLE = createUnmanaged(T_OVR, "ovr_immutable.png");
+	public static final ImageDescriptor DESC_OVR_OVERRIDE = createUnmanaged(T_OVR, "ovr_override.png");
+	
 	public static final ImageDescriptor DESC_OVR_PRIVATE = createUnmanaged(T_OVR, "aggregate-private.png");
 	public static final ImageDescriptor DESC_OVR_PROTECTED = createUnmanaged(T_OVR, "aggregate-protected.png");
 	public static final ImageDescriptor DESC_OVR_DEFAULT = createUnmanaged(T_OVR, "aggregate-default.png");
